[tool.poetry]
name = "niimprint"
version = "0.1.0"
description = ""
authors = [
    "Mark Goodall <no@email>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
pillow = "^10.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
